<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:paddingEnd="0dp"
        android:paddingStart="0dp"
        android:background="@color/action_bar_color"
        app:elevation="8dp"
        android:animateLayoutChanges="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/action_bar_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:contentInsetEnd="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetStart="0dp"
            android:animateLayoutChanges="true"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupTheme">

            <ImageView
                android:id="@+id/left_icon"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="match_parent"
                android:padding="15dp"
                app:showToast="@{@string/out_of_scope_functionalities}"
                android:layout_gravity="center_vertical|start"
                android:src="@drawable/ic_action_menu" />

            <TextView
                android:id="@+id/page_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/ny_times_popular" />

            <ImageView
                android:id="@+id/right_icon"
                android:layout_width="?android:attr/actionBarSize"
                android:layout_height="match_parent"
                android:padding="15dp"
                app:showToast="@{@string/out_of_scope_functionalities}"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/ic_action_search" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

</layout>