<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.popular.broadcast.presentation.home.HomeFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.popular.broadcast.presentation.home.HomeViewModel" />

        <variable
            name="adapter"
            type="com.popular.broadcast.presentation.home.NewsAdapter" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:onRefreshListener="@{() -> viewModel.onRefresh()}"
            app:manageState="@{viewModel.viewRefreshState}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/news_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:setAdapter="@{adapter}"
                app:setDataSet="@{viewModel.newsList}"
                tools:listitem="@layout/layout_news_item"
                android:layout_centerHorizontal="true" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </RelativeLayout>

</layout>