<resources>

    <string name="app_name">Broadcast</string>

    <string name="ny_times_popular">NY Times Most Popular</string>
    <string name="popular_news">Popular News</string>

    <string name="error_not_found">Error: Not Found</string>
    <string name="network_fetch_failed">Error in fetching news from server!</string>
    <string name="news_published_updated_date">News published/updated date</string>
    <string name="out_of_scope_functionalities">Functionality not mentioned in Task</string>

    <string name="section">Section:</string>
    <string name="author">Author:</string>
    <string name="headline">Headline:</string>
    <string name="news_abstract">Abstract:</string>
    <string name="read_from_source">Read from Source</string>
    <string name="news_period">News Period</string>
    <string name="one_day">1 day news</string>
    <string name="seven_days">7 days news</string>
    <string name="thirty_days">30 days news</string>
    <string name="fetching_news_from_server">Refreshing news from Server</string>

</resources>